# Vijayathithanm

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
MagnetFluxStudio/: .gitignore  README.md  pyproject.toml  requirements.txt
MagnetFluxStudio/docs/: ARCHITECTURE.md  BUILD.md  USER_GUIDE.md
MagnetFluxStudio/magnetflux/: __init__.py  __main__.py  config.py  logging_setup.py
MagnetFluxStudio/magnetflux/analysis/: __init__.py  magnetron.py  metrics.py
MagnetFluxStudio/magnetflux/assistant/: __init__.py  recommend.py
MagnetFluxStudio/magnetflux/cad/: __init__.py  gmsh_import.py  importer.py  occ_import.py  stl.py
MagnetFluxStudio/magnetflux/core/: __init__.py  geometry.py  jobs.py  model_tree.py  palette.py  project.py  units.py
MagnetFluxStudio/magnetflux/geometry/: __init__.py  boolean.py  pattern.py  transform.py
MagnetFluxStudio/magnetflux/ui/: app.py  (+15 more)
MagnetFluxStudio/packaging/: installer.iss  magnetflux.spec
MagnetFluxStudio/tests/: test_analysis.py  test_assistant.py  test_cad_gmsh.py  test_cad_import.py  test_cad_names.py  test_enum_coercion.py  test_geometry.py  test_geometry_ops.py  test_jobs.py  test_materials.py  test_materials_persistence.py  test_mesh.py  test_opacity.py  test_optimization.py  test_optimization_algorithms.py  test_palette.py  test_physics.py  test_project.py  test_racetrack.py  test_racetrack_render.py  test_report.py  test_results.py  test_scene_export.py  test_solver.py  test_solver_service.py  test_study.py  test_theme.py  test_units_and_solver_base.py  test_visualization.py
(+111 files in other folders)
